Fix create-package script (#9491)
* Remove jest dom config file generation

* Remove trailing comma from package.json template

* rush update installs

* Add just.config.js step to create-package

* Add @uifabric/build to create-package package.json template

* Fix template string

* Revert changes to create-package.js

* Add just.config.js to create-package script

* Remove jest.dom.config.js from create-package script

--- a/scripts/templates/create-package/EmptyPackageJson.mustache
+++ b/scripts/templates/create-package/EmptyPackageJson.mustache
@@ -20,7 +20,7 @@
     "start": "npx just-scripts dev",
     "start-test": "npx just-scripts jest-watch",
     "update-snapshots": "npx just-scripts jest -u",
-    "just": "npx just-scripts",
+    "just": "npx just-scripts"
   },
   "devDependencies": {
     "@types/enzyme": "{{{typesEnzyme}}}",
@@ -31,6 +31,7 @@
     "@types/react-dom": "{{{typesReactDom}}}",
     "@types/react-test-renderer": "{{{typesReactTestRenderer}}}",
     "@types/webpack-env": "{{{typesWebpackEnv}}}",
+    "@uifabric/build": "{{{uifabricBuild}}}",
     "@uifabric/example-app-base": "{{{uifabricExampleAppBase}}}",
     "@uifabric/jest-serializer-merge-styles": "{{{uifabricJestSerializerMergeStyles}}}",
     "@uifabric/prettier-rules": "{{{uifabricPrettierRules}}}",
