Polyfill - places react-app-polyfill everywhere that generates apps inside UI Fabric repo (#9622)
* update package.json to include react-app-polyfill and webpack config to use it as well

* making sure the prepend works against object styled entrypoint

* prevent prepending polyfill for UMD and Var targets

* change file

--- a/scripts/templates/create-package/EmptyPackageJson.mustache
+++ b/scripts/templates/create-package/EmptyPackageJson.mustache
@@ -40,6 +40,7 @@
     "enzyme-adapter-react-16": "{{{enzymeAdapterReact16}}}",
     "es6-weak-map": "{{{es6WeakMap}}}",
     "react": "{{{react}}}",
+    "react-app-polyfill": "{{{reactAppPolyfill}}}",
     "react-dom": "{{{reactDom}}}",
     "react-test-renderer": "{{{reactTestRenderer}}}"
   },
