Build improvements + improve way to do query param settings on website (#9864)
* Build improvements + add a way to get/set query strings in website

* Add tests for utilities

* Remove redundant index.htmls

--- a/scripts/templates/create-package/EmptyPreCopy.mustache
+++ b/scripts/templates/create-package/EmptyPreCopy.mustache
@@ -1,7 +1,7 @@
 {
   "copyTo": {
     "dist": [
-      "./index.html",
+      "@uifabric/example-app-base/index.html",
       "react/umd/react.development.js",
       "react-dom/umd/react-dom.development.js"
     ]
