--- a/scripts/templates/create-package/EmptyPackageJson.mustache
+++ b/scripts/templates/create-package/EmptyPackageJson.mustache
@@ -2,6 +2,7 @@
   "name": "{{{packageNpmName}}}",
   "version": "0.1.0",
   "description": "Experimental React components for building experiences for Office 365.",
+  "private": true,
   "main": "lib-commonjs/index.js",
   "module": "lib/index.js",
   "typings": "lib/index.d.ts",
