--- a/packages/office-ui-fabric-react/src/components/Callout/examples/CalloutExample.scss
+++ b/packages/office-ui-fabric-react/src/components/Callout/examples/CalloutExample.scss
@@ -52,6 +52,10 @@
     padding: 0 24px 20px;
   }
 
+  .ms-CalloutExample-buttons {
+    padding: 0 24px 12px;
+  }
+
   .ms-CalloutExample-header {
     padding: 18px 24px 12px;
   }
