--- a/packages/experiments/src/components/Tile/Tile.scss
+++ b/packages/experiments/src/components/Tile/Tile.scss
@@ -126,7 +126,7 @@
 .foreground {
   display: inline-flex;
   position: relative;
-  overflow: hidden;
+  overflow: visible;
   max-width: 100%;
   max-height: 100%;
   flex-direction: row;
