--- a/apps/fabric-website/src/styles/_base.scss
+++ b/apps/fabric-website/src/styles/_base.scss
@@ -66,6 +66,25 @@
     @include ms-fontColor-white;
   }
 
+  // #headerWrapper is the UHF header wrapper. The p, ul, ol style in _typography.scss was making
+  // the header links larger than they should be, so reset that here.
+  #headerWrapper,
+  #footerWrapper,
+  #socialMediaContainer {
+    p,
+    ul,
+    ol {
+      font-size: inherit;
+    }
+  }
+
+  // Hide UHF back to top button that attempts to go to a nonexistent #main-content page,
+  // and #flightPicker element which creates accessibility issues
+  a.m-back-to-top,
+  #flightPicker {
+    display: none !important;
+  }
+
   @media screen and (min-width: $uhf-screen-min-mobile) {
     // Align logo with left nav
     .c-uhfh > div {
