--- a/apps/fabric-website/src/styles/_base.scss
+++ b/apps/fabric-website/src/styles/_base.scss
@@ -1,9 +1,11 @@
 @import '~office-ui-fabric-core/dist/sass/References';
 @import './variables';
+@import './mixins';
 
 // Root elements
 :global {
-  html, body {
+  html,
+  body {
     -webkit-font-smoothing: antialiased;
     -webkit-tap-highlight-color: transparent;
     background: $ms-color-gray10; // Match header/footer color for browsers with momentum scroll
@@ -12,13 +14,20 @@
     margin: 0;
     padding: 0;
     width: 100%;
+
+    @include high-contrast {
+      // The gradient doesn't behave well in high contrast, so get rid of it.
+      background: transparent;
+    }
   }
 
   // Border box everywhere
   html {
     box-sizing: border-box;
   }
-  *, *:before, *:after {
+  *,
+  *:before,
+  *:after {
     box-sizing: inherit;
   }
 
@@ -37,7 +46,8 @@
 
   // Implementation table styles
   .PropertiesTable {
-    > h2 { // Table headers are h2s, but should be styled like h3s
+    > h2 {
+      // Table headers are h2s, but should be styled like h3s
       @include ms-fontSize-20;
       @include ms-fontWeight-semibold;
       @include ms-fontColor-gray130;
@@ -46,7 +56,8 @@
 
     // Table headers and group headers
     .ms-DetailsHeader-cellName, // Table headers
-    .ms-GroupHeader-title span { // Group headers
+    .ms-GroupHeader-title span {
+      // Group headers
       @include ms-fontWeight-semibold;
       @include ms-fontColor-gray160;
     }
@@ -62,8 +73,13 @@
   }
 
   // Feedback section styles
-  .FeedbackList-button .ms-Button-label { // Feedback button color overridden by UHF
+  .FeedbackList-button .ms-Button-label {
+    // Feedback button color overridden by UHF
     @include ms-fontColor-white;
+
+    @include high-contrast {
+      color: Window;
+    }
   }
 
   // #headerWrapper is the UHF header wrapper. The p, ul, ol style in _typography.scss was making
