Platform picker high contrast (#11089)
* PlatformPicker: High Contrast support

* Change files

--- a/packages/example-app-base/src/styles/_mixins.scss
+++ b/packages/example-app-base/src/styles/_mixins.scss
@@ -34,3 +34,11 @@
     pointer-events: none;
   }
 }
+
+// High contrast mode mixins
+// @todo: Should be defined in common base
+@mixin high-contrast {
+  @media screen and (-ms-high-contrast: active) {
+    @content;
+  }
+}
