--- a/packages/example-app-base/src/components/PlatformPicker/PlatformPicker.module.scss
+++ b/packages/example-app-base/src/components/PlatformPicker/PlatformPicker.module.scss
@@ -42,6 +42,14 @@ $icon-size: 16px;
     path {
       stroke: $ms-color-neutralSecondary;
     }
+
+    @include high-contrast {
+      color: WindowText;
+
+      path {
+        stroke: WindowText;
+      }
+    }
   }
 
   .webIcon {
@@ -57,6 +65,18 @@ $icon-size: 16px;
 
   &:hover:not([disabled]) {
     color: $ms-color-neutralSecondary;
+
+    path {
+      stroke: $ms-color-neutralSecondary;
+    }
+
+    @include high-contrast {
+      color: WindowText;
+
+      path {
+        stroke: WindowText;
+      }
+    }
   }
 
   &.activePlatform:not([disabled]) {
@@ -67,6 +87,14 @@ $icon-size: 16px;
 
       path {
         stroke: $ms-color-black;
+      }
+
+      @include high-contrast {
+        color: Highlight;
+
+        path {
+          stroke: Highlight;
+        }
       }
     }
   }
