Apply accessibility changes to main package (#11159)
* Fixed Today, and editing states

* Fixed Today hover and selection

* Fixed selection color

* Change files

* Fixed header weight and color

* fixed selected hover in month

* addressed PR feedback

--- a/packages/office-ui-fabric-react/src/components/Calendar/Calendar.scss
+++ b/packages/office-ui-fabric-react/src/components/Calendar/Calendar.scss
@@ -86,8 +86,8 @@ $Calendar-dayPicker-margin: 10px;
   display: inline-flex;
   flex-grow: 1;
   @include ms-font-m;
+  font-weight: 600;
   color: $ms-color-neutralPrimary;
-  font-weight: $ms-font-weight-semibold;
   padding: 0 5px;
 }
 
@@ -163,13 +163,15 @@ $Calendar-dayPicker-margin: 10px;
 }
 
 // Today.
+.dayIsToday {
+  border-radius: 100%;
+}
 .dayIsToday,
 .dayIsToday:hover {
   position: relative;
-  background-color: $ms-color-themeLight;
+  background-color: $ms-color-neutralLighter;
   @include high-contrast {
     background-color: highlight;
-    border-radius: 2px;
   }
   span {
     @include high-contrast {
@@ -178,7 +180,7 @@ $Calendar-dayPicker-margin: 10px;
     }
   }
   &:hover {
-    border-radius: 0px;
+    border-radius: 100%;
   }
 }
 
@@ -197,7 +199,7 @@ $Calendar-dayPicker-margin: 10px;
 .dayIsFocused:hover,
 .dayIsUnfocused:hover {
   cursor: pointer;
-  background: $ms-color-neutralLight;
+  background: $ms-color-neutralLighter;
   color: $ms-color-neutralDark;
 }
 
@@ -205,6 +207,8 @@ $Calendar-dayPicker-margin: 10px;
 .daySelection.dayIsHighlighted:hover,
 .pickerIsFocused .dayIsHighlighted.daySelection {
   cursor: pointer;
+  background-color: $ms-color-neutralLight;
+  border-radius: 2px;
   @include high-contrast {
     border: 2px solid Highlight;
     :not(.dayIsToday) span {
@@ -216,7 +220,7 @@ $Calendar-dayPicker-margin: 10px;
 .dayIsHighlighted {
   button.dayIsToday {
     @include high-contrast {
-      border-radius: 0px;
+      border-radius: 100%;
     }
     span {
       @include high-contrast {
@@ -228,14 +232,14 @@ $Calendar-dayPicker-margin: 10px;
 
 .dayIsFocused:active,
 .dayIsHighlighted {
-  background: $ms-color-themeLight;
+  background-color: $ms-color-themeLight;
 }
 
 .dayIsFocused:active,
 .dayIsHighlighted {
   &.day {
-    color: $ms-color-neutralPrimary;
-    font-weight: $ms-font-weight-semibold;
+    color: $ms-color-neutralDark;
+    background-color: $ms-color-neutralLight;
   }
 }
 
@@ -255,18 +259,18 @@ $Calendar-dayPicker-margin: 10px;
 .dayHover,
 .dayHover:hover {
   cursor: pointer;
-  background: $ms-color-neutralLight;
+  background: $ms-color-neutralLighter;
   color: $ms-color-neutralDark;
 }
 
 .dayPress,
 .dayPress:hover {
   cursor: pointer;
-  font-weight: $ms-font-weight-semibold;
-  background: $ms-color-themeLight;
-  color: $ms-color-neutralPrimary;
+  color: $ms-color-neutralDark;
+  background-color: $ms-color-neutralLight;
   .dayIsToday {
     background: $ms-color-themePrimary;
+    border-radius: 100%;
   }
 }
 
@@ -278,9 +282,8 @@ $Calendar-dayPicker-margin: 10px;
 .weekBackground,
 .weekBackground:hover,
 .weekBackground:active {
-  background: $ms-color-themeLight;
-  color: $ms-color-neutralPrimary;
-  font-weight: $ms-font-weight-semibold;
+  background-color: $ms-color-neutralLight;
+  color: $ms-color-neutralDark;
 }
 
 // Today.
@@ -291,6 +294,7 @@ $Calendar-dayPicker-margin: 10px;
   color: $ms-color-white;
   font-weight: $ms-font-weight-semibold;
   background: $ms-color-themePrimary;
+  border-radius: 100%;
 }
 
 .showWeekNumbers {
@@ -410,11 +414,11 @@ $Calendar-dayPicker-margin: 10px;
   flex-grow: 1;
   padding: 0 5px;
   @include ms-font-m;
+  font-weight: 600;
   color: $ms-color-neutralPrimary;
   height: $Calendar-day;
   line-height: $Calendar-day;
   @include margin-left(5px);
-  font-weight: $ms-font-weight-semibold;
 }
 
 // A grid of month or year options, which pushes them over
@@ -444,7 +448,7 @@ $Calendar-dayPicker-margin: 10px;
   border-radius: 2px;
   &:hover {
     color: $ms-color-neutralDark;
-    background-color: $ms-color-neutralLight;
+    background-color: $ms-color-neutralLighter;
     outline: 1px solid transparent;
     @include high-contrast {
       outline-color: highlight;
@@ -456,8 +460,8 @@ $Calendar-dayPicker-margin: 10px;
     }
   }
   &.isHighlighted {
-    background-color: $ms-color-neutralPrimary;
-    color: $ms-color-white;
+    background-color: $ms-color-neutralLight;
+    color: $ms-color-neutralDark;
   }
 }
 
@@ -746,14 +750,14 @@ $Calendar-dayPicker-margin: 10px;
   display: inline-block;
 
   &:hover {
-    background-color: $ms-color-neutralLight;
+    background-color: $ms-color-neutralLighter;
     color: $ms-color-neutralDark;
     @include high-contrast {
       outline: 1px solid highlight;
     }
   }
   &:active {
-    background-color: $ms-color-themeLight;
+    background-color: $ms-color-neutralLight;
     @include high-contrast {
       color: highlight;
     }
@@ -761,11 +765,10 @@ $Calendar-dayPicker-margin: 10px;
 }
 
 .monthIsHighlighted {
-  font-weight: $ms-font-weight-semibold;
-  background-color: $ms-color-themeLight;
-  color: $ms-color-neutralPrimary;
+  background-color: $ms-color-neutralLight;
+  color: $ms-color-neutralDark;
   &.monthOption:hover {
-    background-color: $ms-color-themeLight;
+    background-color: $ms-color-neutralLight;
   }
   @include high-contrast {
     color: highlight;
@@ -778,43 +781,38 @@ $Calendar-dayPicker-margin: 10px;
 }
 
 .monthIsCurrentMonth {
-  font-weight: $ms-font-weight-semibold;
   color: $ms-color-white;
-  background-color: $ms-color-themePrimary;
+  background-color: $ms-color-neutralLight;
   &.monthOption:hover {
-    font-weight: $ms-font-weight-semibold;
     color: $ms-color-white;
-    background-color: $ms-color-themePrimary;
+    background-color: $ms-color-neutralLighter;
   }
 }
 
 .monthOption:active {
-  background-color: $ms-color-themeLight;
+  background-color: $ms-color-neutralLight;
   color: $ms-color-neutralDark;
 }
 
 .yearIsHighlighted {
-  font-weight: $ms-font-weight-semibold;
-  background-color: $ms-color-themeLight;
-  color: $ms-color-neutralPrimary;
+  background-color: $ms-color-neutralLight;
+  color: $ms-color-neutralDark;
   &.yearOption:hover {
-    background-color: $ms-color-themeLight;
+    background-color: $ms-color-neutralLighter;
   }
 }
 
 .yearIsCurrentYear {
-  font-weight: $ms-font-weight-semibold;
   color: $ms-color-white;
-  background-color: $ms-color-themePrimary;
+  background-color: $ms-color-neutralLight;
   &.yearOption:hover {
-    font-weight: $ms-font-weight-semibold;
     color: $ms-color-white;
-    background-color: $ms-color-themePrimary;
+    background-color: $ms-color-neutralLighter;
   }
 }
 
 .yearOption:active {
-  background-color: $ms-color-themeLight;
+  background-color: $ms-color-neutralLight;
   color: $ms-color-neutralDark;
 }
 
