--- a/packages/office-ui-fabric-react/src/components/pickers/BasePicker.scss
+++ b/packages/office-ui-fabric-react/src/components/pickers/BasePicker.scss
@@ -14,7 +14,18 @@
   }
 
   &.inputFocused {
+    position: relative;
     border-color: $inputFocusBorderAltColor;
+    &:after {
+      pointer-events: none;
+      content: '';
+      position: absolute;
+      left: -1px;
+      top: -1px;
+      bottom: -1px;
+      right: -1px;
+      border: 2px solid $inputFocusBorderAltColor;
+    }
   }
 }
 
