Fix UHF "skip to main content" link and update focus properly when jumping to anchors (#11639)
* Fix UHF "skip to main content" link, and update focus properly when scrolling to anchors

* Change files

* update ApiReferencesTable too

--- a/packages/example-app-base/src/components/Page/Page.module.scss
+++ b/packages/example-app-base/src/components/Page/Page.module.scss
@@ -194,6 +194,9 @@ $usageListPadding: 24px;
 
 .subHeading {
   @include ms-fontSize-24;
+  // These headings are programmatically focusable to simulate jumping to an anchor,
+  // but they shouldn't have a focus outline
+  outline: none;
 }
 
 .smallSubHeading {
