--- a/apps/public-docsite/src/components/Site/Site.module.scss
+++ b/apps/public-docsite/src/components/Site/Site.module.scss
@@ -1,5 +1,4 @@
-@import '../../styles/variables';
-@import '../../styles/mixins';
+@import '../../styles/common';
 
 .siteRoot {
   min-height: 100vh;
@@ -58,6 +57,19 @@
     border-right: 1px solid WindowText;
     border-left: 1px solid WindowText;
     border-bottom: 1px solid WindowText;
+  }
+}
+
+// Apply content padding, based on device size
+@mixin contentPadding($paddingTop:0px, $paddingBottom:$contentPaddingBottom) {
+  padding: $paddingTop $contentPadding-sm $paddingBottom $contentPadding-sm;
+
+  @media screen and (min-width: $uhf-screen-min-mobile) {
+    padding: $paddingTop $contentPadding-lg $paddingBottom $contentPadding-lg;
+  }
+
+  @media screen and (min-width: $ms-screen-min-xl) {
+    padding: $paddingTop $contentPadding-xl $paddingBottom $contentPadding-xl;
   }
 }
 
