--- a/apps/public-docsite/src/components/Table/Table.module.scss
+++ b/apps/public-docsite/src/components/Table/Table.module.scss
@@ -1,5 +1,4 @@
-@import '../../styles/variables';
-@import '~@fluentui/common-styles/src/common';
+@import '../../styles/common';
 
 .table {
   color: $ms-color-neutralPrimary;
