--- a/apps/public-docsite/src/pages/PageTemplates/TemplatePage/TemplatePage.module.scss
+++ b/apps/public-docsite/src/pages/PageTemplates/TemplatePage/TemplatePage.module.scss
@@ -1,5 +1,5 @@
 // Import variables
-@import '../../../styles/variables';
+@import '../../../styles/common';
 
 // Define your classNames using camel case (NO DASHES)
 .customSection {
