--- a/apps/public-docsite/src/pages/Styles/LayoutPage/LayoutPage.module.scss
+++ b/apps/public-docsite/src/pages/Styles/LayoutPage/LayoutPage.module.scss
@@ -1,5 +1,4 @@
-@import '../../../styles/variables';
-@import '../../../styles/mixins';
+@import '../../../styles/common';
 
 // This is so the class can be used directly in a Markdown file
 .demoBlock,
