--- a/apps/public-docsite/src/styles/_base.scss
+++ b/apps/public-docsite/src/styles/_base.scss
@@ -1,6 +1,4 @@
-@import '~office-ui-fabric-core/dist/sass/References';
-@import './variables';
-@import './mixins';
+@import './common';
 
 // Root elements
 :global {
