--- a/apps/public-docsite/src/styles/_common.scss
+++ b/apps/public-docsite/src/styles/_common.scss
@@ -1,5 +1,4 @@
-@import '~office-ui-fabric-core/dist/sass/References';
-@import './semanticSlots';
+@import '~@fluentui/common-styles/src/common';
 
 // Padding matches padding used by UHF at the same (lg / sm) UHF breakpoints
 $App-padding-left-lg: 32px;
