--- a/packages/example-app-base/src/styles/_overrides.scss
+++ b/packages/example-app-base/src/styles/_overrides.scss
@@ -1,5 +1,4 @@
-@import '~office-ui-fabric-core/dist/sass/References';
-@import './variables';
+@import './common';
 
 //== Fabric overrides and additions
 
