--- a/packages/react-internal/src/components/pickers/BasePicker.scss
+++ b/packages/react-internal/src/components/pickers/BasePicker.scss
@@ -1,5 +1,4 @@
-@import '../../common/common';
-@import '../../common/semanticSlots';
+@import '~@fluentui/common-styles/src/common';
 
 .pickerText {
   display: flex;
