--- a/apps/public-docsite/src/pages/Styles/OfficeBrandIconsPage/OfficeBrandIconsPage.module.scss
+++ b/apps/public-docsite/src/pages/Styles/OfficeBrandIconsPage/OfficeBrandIconsPage.module.scss
@@ -1,4 +1,4 @@
-@import '../../../styles/variables';
+@import '../../../styles/common';
 
 .paragraphInGrid {
   @include ms-padding-left($contentInGrid);
