--- a/apps/public-docsite/src/styles/_overrides.scss
+++ b/apps/public-docsite/src/styles/_overrides.scss
@@ -1,5 +1,4 @@
-@import '~office-ui-fabric-core/dist/sass/References';
-@import './variables';
+@import './common';
 
 //== Fluent UI overrides and additions
 
