--- a/packages/example-app-base/src/styles/_typography.scss
+++ b/packages/example-app-base/src/styles/_typography.scss
@@ -1,5 +1,4 @@
-@import '~office-ui-fabric-core/dist/sass/References';
-@import './variables';
+@import './common';
 
 // Standard text size and spacing
 :global {
