fix(react-theme): Update theme tokens (#25903)
* fix(react-theme): Update theme tokens

* change files

* Apply suggestions from code review

Co-authored-by: Sean Monahan <seanmonahan@microsoft.com>

Co-authored-by: Sean Monahan <seanmonahan@microsoft.com>

--- a/packages/react-components/react-theme-sass/sass/colorPaletteTokens.scss
+++ b/packages/react-components/react-theme-sass/sass/colorPaletteTokens.scss
@@ -4,6 +4,7 @@ $colorPaletteRedBackground3: var(--colorPaletteRedBackground3);
 $colorPaletteRedForeground1: var(--colorPaletteRedForeground1);
 $colorPaletteRedForeground2: var(--colorPaletteRedForeground2);
 $colorPaletteRedForeground3: var(--colorPaletteRedForeground3);
+$colorPaletteRedForegroundInverted: var(--colorPaletteRedForegroundInverted);
 $colorPaletteRedBorderActive: var(--colorPaletteRedBorderActive);
 $colorPaletteRedBorder1: var(--colorPaletteRedBorder1);
 $colorPaletteRedBorder2: var(--colorPaletteRedBorder2);
@@ -14,6 +15,7 @@ $colorPaletteGreenBackground3: var(--colorPaletteGreenBackground3);
 $colorPaletteGreenForeground1: var(--colorPaletteGreenForeground1);
 $colorPaletteGreenForeground2: var(--colorPaletteGreenForeground2);
 $colorPaletteGreenForeground3: var(--colorPaletteGreenForeground3);
+$colorPaletteGreenForegroundInverted: var(--colorPaletteGreenForegroundInverted);
 $colorPaletteGreenBorderActive: var(--colorPaletteGreenBorderActive);
 $colorPaletteGreenBorder1: var(--colorPaletteGreenBorder1);
 $colorPaletteGreenBorder2: var(--colorPaletteGreenBorder2);
@@ -34,6 +36,7 @@ $colorPaletteYellowBackground3: var(--colorPaletteYellowBackground3);
 $colorPaletteYellowForeground1: var(--colorPaletteYellowForeground1);
 $colorPaletteYellowForeground2: var(--colorPaletteYellowForeground2);
 $colorPaletteYellowForeground3: var(--colorPaletteYellowForeground3);
+$colorPaletteYellowForegroundInverted: var(--colorPaletteYellowForegroundInverted);
 $colorPaletteYellowBorderActive: var(--colorPaletteYellowBorderActive);
 $colorPaletteYellowBorder1: var(--colorPaletteYellowBorder1);
 $colorPaletteYellowBorder2: var(--colorPaletteYellowBorder2);
