docs: fix storybook code tag not having any highlight/monospace font (#26187)

--- a/.storybook/docs-root.css
+++ b/.storybook/docs-root.css
@@ -62,6 +62,11 @@
   padding: 48px 0 0 0;
 }
 
+#docs-root .sbdocs-h2 code {
+  border-radius: 4px;
+  font-size: 20px;
+}
+
 #docs-root .sbdocs-h3 {
   font-family: 'Segoe UI', 'Segoe UI Web (West European)', -apple-system, BlinkMacSystemFont, Roboto, 'Helvetica Neue',
     sans-serif;
@@ -70,6 +75,11 @@
   margin: 25px 0 0 0 !important;
   letter-spacing: -0.01em;
   color: #000000;
+}
+
+#docs-root .sbdocs-h3 code {
+  border-radius: 3px;
+  font-size: 16px;
 }
 
 /* Only apply to H3s inside of stories which have a parent with an ID */
@@ -285,7 +295,7 @@
 #docs-root .docblock-argstable-body > tr > td:nth-child(2) > div:nth-child(2) span,
 #docs-root .docblock-argstable-body > tr > td:nth-child(2) > div:nth-child(1) > div > span,
 #docs-root .css-16d4d7t {
-  font-family: Menlo, monospace;
+  font-family: 'Cascadia Code', Menlo, 'Courier New', Courier, monospace;
   font-style: normal;
   font-weight: normal;
   font-size: 14px;
@@ -318,7 +328,10 @@
 }
 
 #docs-root code {
-  margin: 1px 0 1px 0;
+  padding: 0.1em 0.2em;
+  display: inline-block;
+  background-color: rgba(17, 16, 15, 0.1);
+  border-radius: 2px;
 }
 
 .os-content-glue {
