feat: port codesandbox addon (#26810)
* feat: Port codesandbox addon

* fix syncpack

* remove references to old addong

* build esm

--- a/.storybook/docs-root.css
+++ b/.storybook/docs-root.css
@@ -174,7 +174,7 @@
   }
 }
 
-/* Make storybook-addon-export-to-codesandbox button match Figma design */
+/* Make storybook codesandbox export button match Figma design */
 .docs-story .with-code-sandbox-button {
   right: 105px !important;
 }
