feat(tokens): Add colorNeutralBackgroundAlpha and colorNeutralStrokeAlpha tokens (#27034)
* feat(tokens): Add colorNeutralBackgroundAlpha and colorNeutralStrokeAlpha tokens

* change files

* Update migration package

* Add colorNeutralBackgroundAlpha2

* chnage file

* fix docsite

* Apply suggestions from code review

Co-authored-by: Martin Hochel <hochelmartin@gmail.com>

* revert debugging code

---------

Co-authored-by: Martin Hochel <hochelmartin@gmail.com>
Co-authored-by: Oleksandr Fediashov <olfedias@microsoft.com>

--- a/packages/react-components/react-theme-sass/sass/colorTokens.scss
+++ b/packages/react-components/react-theme-sass/sass/colorTokens.scss
@@ -72,8 +72,10 @@ $colorNeutralBackground5Hover: var(--colorNeutralBackground5Hover);
 $colorNeutralBackground5Pressed: var(--colorNeutralBackground5Pressed);
 $colorNeutralBackground5Selected: var(--colorNeutralBackground5Selected);
 $colorNeutralBackground6: var(--colorNeutralBackground6);
-$colorNeutralBackgroundStatic: var(--colorNeutralBackgroundStatic);
 $colorNeutralBackgroundInverted: var(--colorNeutralBackgroundInverted);
+$colorNeutralBackgroundStatic: var(--colorNeutralBackgroundStatic);
+$colorNeutralBackgroundAlpha: var(--colorNeutralBackgroundAlpha);
+$colorNeutralBackgroundAlpha2: var(--colorNeutralBackgroundAlpha2);
 $colorSubtleBackground: var(--colorSubtleBackground);
 $colorSubtleBackgroundHover: var(--colorSubtleBackgroundHover);
 $colorSubtleBackgroundPressed: var(--colorSubtleBackgroundPressed);
@@ -135,6 +137,7 @@ $colorNeutralStrokeInvertedDisabled: var(--colorNeutralStrokeInvertedDisabled);
 $colorTransparentStroke: var(--colorTransparentStroke);
 $colorTransparentStrokeInteractive: var(--colorTransparentStrokeInteractive);
 $colorTransparentStrokeDisabled: var(--colorTransparentStrokeDisabled);
+$colorNeutralStrokeAlpha: var(--colorNeutralStrokeAlpha);
 $colorStrokeFocus1: var(--colorStrokeFocus1);
 $colorStrokeFocus2: var(--colorStrokeFocus2);
 $colorNeutralShadowAmbient: var(--colorNeutralShadowAmbient);
