--- a/scripts/generators/create-package/plop-templates-react/package.json.hbs
+++ b/scripts/generators/create-package/plop-templates-react/package.json.hbs
@@ -31,6 +31,7 @@
     "@fluentui/scripts-tasks": ""
   },
   "dependencies": {
+    "@fluentui/react-jsx-runtime": "",
     "@fluentui/react-theme": "",
     "@fluentui/react-utilities": "",
     "@griffel/react": "",
