chore: bump @griffel/eslint-plugin & enable @griffel/hook-naming (#27687)

--- a/scripts/generators/create-component/plop-templates/src/components/{{componentName}}/index.ts.hbs
+++ b/scripts/generators/create-component/plop-templates/src/components/{{componentName}}/index.ts.hbs
@@ -2,4 +2,4 @@ export * from './{{componentName}}';
 export * from './{{componentName}}.types';
 export * from './render{{componentName}}';
 export * from './use{{componentName}}';
-export * from './use{{componentName}}Styles';
+export * from './use{{componentName}}Styles.styles';
