--- a/scripts/generators/create-component/plop-templates/src/components/{{componentName}}/{{componentName}}.tsx.hbs
+++ b/scripts/generators/create-component/plop-templates/src/components/{{componentName}}/{{componentName}}.tsx.hbs
@@ -1,7 +1,7 @@
 import * as React from 'react';
 import { use{{componentName}}_unstable } from './use{{componentName}}';
 import { render{{componentName}}_unstable } from './render{{componentName}}';
-import { use{{componentName}}Styles_unstable } from './use{{componentName}}Styles';
+import { use{{componentName}}Styles_unstable } from './use{{componentName}}Styles.styles';
 import type { {{componentName}}Props } from './{{componentName}}.types';
 import type { ForwardRefComponent } from '@fluentui/react-utilities';
 
