--- a/scripts/generators/create-component/plop-templates/src/components/{{componentName}}/render{{componentName}}.tsx.hbs
+++ b/scripts/generators/create-component/plop-templates/src/components/{{componentName}}/render{{componentName}}.tsx.hbs
@@ -1,12 +1,15 @@
-import * as React from 'react';
-import { getSlots } from '@fluentui/react-utilities';
+/** @jsxRuntime classic */
+/** @jsx createElement */
+
+import { createElement } from '@fluentui/react-jsx-runtime';
+import { getSlotsNext } from '@fluentui/react-utilities';
 import type { {{componentName}}State, {{componentName}}Slots } from './{{componentName}}.types';
 
 /**
  * Render the final JSX of {{componentName}}
  */
 export const render{{componentName}}_unstable = (state: {{componentName}}State) => {
-  const { slots, slotProps } = getSlots<{{componentName}}Slots>(state);
+  const { slots, slotProps } = getSlotsNext<{{componentName}}Slots>(state);
 
   // TODO Add additional slots in the appropriate place
   return <slots.root {...slotProps.root} />;
